--- a/lista_6/output/exercicio_3.dSYM/Contents/Resources/Relocations/aarch64/exercicio_3.yml
+++ b/lista_6/output/exercicio_3.dSYM/Contents/Resources/Relocations/aarch64/exercicio_3.yml
@@ -2,7 +2,7 @@
 triple:          'arm64-apple-darwin'
 binary-path:     '/Users/laura.strada/Desktop/mocks json/atp1/listas/lista_6/output/exercicio_3'
 relocations:
-  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: __Z6qtdAlgi, symObjAddr: 0x0, symBinAddr: 0x100003E2C, symSize: 0x78 }
-  - { offsetInCU: 0x41, offset: 0x41, size: 0x8, addend: 0x0, symName: __Z6qtdAlgi, symObjAddr: 0x0, symBinAddr: 0x100003E2C, symSize: 0x78 }
-  - { offsetInCU: 0x6D, offset: 0x6D, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x78, symBinAddr: 0x100003EA4, symSize: 0x70 }
+  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: __Z6qtdAlgi, symObjAddr: 0x0, symBinAddr: 0x100003E4C, symSize: 0x5C }
+  - { offsetInCU: 0x41, offset: 0x41, size: 0x8, addend: 0x0, symName: __Z6qtdAlgi, symObjAddr: 0x0, symBinAddr: 0x100003E4C, symSize: 0x5C }
+  - { offsetInCU: 0x6D, offset: 0x6D, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x5C, symBinAddr: 0x100003EA8, symSize: 0x70 }
 ...
