--- a/lista_7/output/exercicio_2.dSYM/Contents/Resources/Relocations/aarch64/exercicio_2.yml
+++ b/lista_7/output/exercicio_2.dSYM/Contents/Resources/Relocations/aarch64/exercicio_2.yml
@@ -2,7 +2,7 @@
 triple:          'arm64-apple-darwin'
 binary-path:     '/Users/laura.strada/Desktop/mocks json/atp1/listas/lista_7/output/exercicio_2'
 relocations:
-  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: __Z7leVetoriPcPi, symObjAddr: 0x0, symBinAddr: 0x100003CC8, symSize: 0xA0 }
-  - { offsetInCU: 0x41, offset: 0x41, size: 0x8, addend: 0x0, symName: __Z7leVetoriPcPi, symObjAddr: 0x0, symBinAddr: 0x100003CC8, symSize: 0xA0 }
-  - { offsetInCU: 0xA1, offset: 0xA1, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0xA0, symBinAddr: 0x100003D68, symSize: 0x194 }
+  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: __Z7leVetoriPcS_, symObjAddr: 0x0, symBinAddr: 0x100003C6C, symSize: 0xA0 }
+  - { offsetInCU: 0x41, offset: 0x41, size: 0x8, addend: 0x0, symName: __Z7leVetoriPcS_, symObjAddr: 0x0, symBinAddr: 0x100003C6C, symSize: 0xA0 }
+  - { offsetInCU: 0xA1, offset: 0xA1, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0xA0, symBinAddr: 0x100003D0C, symSize: 0x1B4 }
 ...
