--- a/lista_10/output/exercicio_4.dSYM/Contents/Resources/Relocations/aarch64/exercicio_4.yml
+++ b/lista_10/output/exercicio_4.dSYM/Contents/Resources/Relocations/aarch64/exercicio_4.yml
@@ -2,6 +2,6 @@
 triple:          'arm64-apple-darwin'
 binary-path:     '/Users/laura.strada/Desktop/mocks json/atp1/listas/lista_10/output/exercicio_4'
 relocations:
-  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100003CB8, symSize: 0x1D4 }
-  - { offsetInCU: 0x4D, offset: 0x4D, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100003CB8, symSize: 0x1D4 }
+  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100003C30, symSize: 0x244 }
+  - { offsetInCU: 0x4D, offset: 0x4D, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100003C30, symSize: 0x244 }
 ...
